# My-EPITECH-Project

./: README.md
First_Year_Projects/BSQ/: Makefile
First_Year_Projects/BSQ/sources/: buffer_to_array.c  count_cols.c  count_raws.c  find_square.c  free_2d_array.c  is_square_of_size.c  load_file_in_mem.c  main.c  mem_alloc_2d_array.c  my.h  my_getnbr.c  my_putstr.c  print_2d_array.c  replace_x.c
First_Year_Projects/epytodo/: epytodo.sql  package-lock.json  package.json
First_Year_Projects/epytodo/src/: index.js
First_Year_Projects/matchstick/: Makefile  main.c
First_Year_Projects/myhunter/: Makefile
First_Year_Projects/myhunter/sources/: analyse_events.c  clock_function.c  create_vec.c  destroy_sprite.c  duck.c  first_while.c  game_loop.c  h.c  hit.c  main.c  manage_window.c  move_rect.c  my_hunter.c  my_hunter.h  rect_size.c  video_mode_set.c
First_Year_Projects/myprintf/: Makefile
First_Year_Projects/myprintf/includes/: my.h
First_Year_Projects/myprintf/sources/: disp_stdarg.c  my_printf.c  my_put_nbr.c  my_putchar.c  my_strlen.c
First_Year_Projects/myprintf/tests/: tests_my_printf.c
First_Year_Projects/myrunner/: Makefile  main.c
First_Year_Projects/myrunner/includes/: my_runner.h
First_Year_Projects/myrunner/sources/: analyse_events.c  clock_function.c  config_clock.c  create_duck.c  create_object.c  create_parallax.c  create_parallax2.c  create_rect.c  create_vec.c  destroy_object.c  draw_parallax.c  free_all.c  game_loop.c  jump.c  move_all_parallax.c  move_parallax.c  move_rect.c  my_runner.c  reset_position_parallax.c  reset_position_parallax2.c  set_position_parallax.c  usage.c  video_mode_set.c
First_Year_Projects/mysokoban/: Makefile  main.c  map_simple_1
First_Year_Projects/popeye/: docker-compose.yml
First_Year_Projects/pushswap/: Makefile
Fourth_Year_Projects/LostOps/: docker-compose.yaml  mysql-exporter.cnf
Fourth_Year_Projects/SLA/: vault-password-file.txt
Second_Year_Projects/arcade/: Makefile  core.cpp  core.hpp  main.cpp
Second_Year_Projects/ftrace/: Makefile  main.c
Second_Year_Projects/indiestudio/: CMakeLists.txt  MyMain.cpp  test.cpp
Second_Year_Projects/malloc/: Makefile  alloc_function.c  alloc_function.h  linked_list.h  linked_list_function.c
Second_Year_Projects/minilibC/: Makefile  memcpy.asm  memmove.asm  memset.asm  strchr.asm  strcmp.asm  strlen.asm  strncmp.asm  strrchr.asm
Second_Year_Projects/nmobjdump/: Makefile
Second_Year_Projects/panoramix/: Makefile  druid_thread.c  main2.c  panoramix.c  villager_thread.c
Third_Year_Projects/Ecommerce/: README  hosts  playbook.yml  vars.yml
Third_Year_Projects/LostOps/: Dockerfile  README.md  alert.rules  composer.json  loki-config.yaml  package.json  prometheus.yml  promtail-config.yaml
Third_Year_Projects/bernstein/: cadvisor.daemonset.yaml  poll.deployment.yaml  poll.ingress.yaml  poll.service.yaml  postgres.configmap.yaml  postgres.deployment.yaml  postgres.secret.yaml  postgres.service.yaml  postgres.volume.yaml  redis.configmap.yaml  redis.deployment.yaml  result.deployment.yaml  result.ingress.yaml  result.service.yaml  traefik.deployment.yaml  traefik.rbac.yaml  traefik.service.yaml  worker.deployment.yaml
Third_Year_Projects/myMarvin/: Dockerfile  docker-compose.yml  jenkins.env  job_dsl.groovy  my_marvin.yml
Third_Year_Projects/redditech/: App.js  app.json  package-lock.json  package.json
mysokoban/: bad_map  map
mysokoban/sources/: buffer_to_array.c  my_strcmp.c  mysokoban_function.c  print_resize_window.c
mysokoban/tests/: tests_get_position.c  tests_make_map_from_string.c
(+148 files in other folders)
